Fix bug where patient_profile had mesasge about "not unique" email when you clicked out of the box for a patient's existing (and good) email address. https://www.pivotaltracker.com/story/show/128809749

--- a/portal/templates/patient_profile.html
+++ b/portal/templates/patient_profile.html
@@ -287,9 +287,11 @@
 {% endblock %}
 
 {% block document_ready %}
+
+var patientId = {{ patient.id }};
 $(document).ready(function(){
 
-    tnthAjax.getOrgs({{ patient.id }});
+    tnthAjax.getOrgs(patientId);
 
     // Fill in 3 birthday fields based on existing value - requires date format YYYY-MM-DD
     var currentBd = $("#birthday").val();
