2ndpart of bug fix for "not unique" emails - this time for the profile page. https://www.pivotaltracker.com/story/show/128809749

--- a/portal/templates/profile.html
+++ b/portal/templates/profile.html
@@ -290,6 +290,7 @@ My TrueNTH Profile
 {% endblock %}
 
 {% block document_ready %}
+var patientId = {{ user.id }};
 $(document).ready(function(){
 
     tnthAjax.getOrgs({{ user.id }});
