--- a/portal/templates/portal_wrapper.html
+++ b/portal/templates/portal_wrapper.html
@@ -76,6 +76,50 @@
                     {% endif %}
                 </div>
             </div>
+            <div id="session-warning-modal" class="modal">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title" id="sessWarnLabel">Your session is about to expire
+                                <a class="sectionlink" title="Section permalink" href="#sessWarnLabel"></a>
+                            </h4>
+                        </div>
+                        <div class="modal-body">
+                            Your session will expire in <span id="remaining-time"></span> seconds due to inactivity.
+                        </div>
+                        <div class="modal-footer">
+                            <button id="log-out" class="btn btn-default" type="button" data-dismiss="modal">Log Out</button>
+                            <button id="stay-logged-in" class="btn btn-warning" type="button" data-dismiss="modal">Stay Logged In</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <script type="text/javascript">
+                // Configure and start the session timeout monitor
+                sessMon = sessionMonitor({
+                    // Subtract 10 seconds to ensure the backend doesn't
+                    // expire the session first
+                    sessionLifetime: {{ config.PERMANENT_SESSION_LIFETIME * 1000 }} - (10 * 1000),
+                    timeBeforeWarning: 1 * 60 * 1000,
+                    minPingInterval: 1 * 60 * 1000,  // 1 minute
+                    onwarning: function() {
+                        $("#session-warning-modal").modal("show");
+                    }
+                });
+                $(document).ready( function() {
+                    // Configure the session timeout warning modal
+                    $("#session-warning-modal")
+                        .modal({
+                            "backdrop": "static",
+                            "keyboard": false,
+                            "show": false
+                        })
+                        .on("click", "#stay-logged-in", sessMon.extendsess)
+                        .on("click", "#log-out", sessMon.logout)
+                        .find("#remaining-time").text(sessMon.timeBeforeWarning / 1000);
+                });
+                window.sessMon = sessMon;
+            </script>
         </div>
 
     </div>
