--- a/portal/templates/portal_wrapper.html
+++ b/portal/templates/portal_wrapper.html
@@ -95,9 +95,30 @@
                 </div>
             </div>
             <script type="text/javascript">
-                // Set default sessionLifetime from Flask config
-                // Subtract 10 seconds to ensure the backend doesn't expire the session first
-                DEFAULT_SESSION_LIFETIME = {{ config.PERMANENT_SESSION_LIFETIME * 1000 }} - (10 * 1000);
+                // Configure and start the session timeout monitor
+                sessMon = sessionMonitor({
+                    // Subtract 10 seconds to ensure the backend doesn't
+                    // expire the session first
+                    sessionLifetime: {{ config.PERMANENT_SESSION_LIFETIME * 1000 }} - (10 * 1000),
+                    timeBeforeWarning: 1 * 60 * 1000,
+                    minPingInterval: 1 * 60 * 1000,  // 1 minute
+                    onwarning: function() {
+                        $("#session-warning-modal").modal("show");
+                    }
+                });
+                $(document).ready( function() {
+                    // Configure the session timeout warning modal
+                    $("#session-warning-modal")
+                        .modal({
+                            "backdrop": "static",
+                            "keyboard": false,
+                            "show": false
+                        })
+                        .on("click", "#stay-logged-in", sessMon.extendsess)
+                        .on("click", "#log-out", sessMon.logout)
+                        .find("#remaining-time").text(sessMon.timeBeforeWarning / 1000);
+                });
+                window.sessMon = sessMon;
             </script>
         </div>
 
