add profile creation UI and other modifications to profile.html

--- a/portal/templates/admin.html
+++ b/portal/templates/admin.html
@@ -5,7 +5,7 @@
 
     <h3 class="tnth-headline">User Administration</h3>
 
-    <p id="profileIntro"><a href="{{ url_for('.profile_create') }}">Create an user</a> or Select any user to view details or make changes.</p>
+    <p id="profileIntro">Select any user to view details or make changes.</p>
 
     <div class="admin-table table-responsive smaller-text">
         <div id="adminTableToolbar" class="admin-toolbar"><span id="tableCount"></span></div>
