--- a/portal/templates/patients_by_org.html
+++ b/portal/templates/patients_by_org.html
@@ -18,7 +18,7 @@
 </div>
 {% endif %}
 
-<p>Select any user to view details or make changes.</p>
+<p><a href="{{ url_for('patients.profile_create') }}">Create an user</a> or Select any user to view details or make changes.</p>
 <hr />
 
 {% set orgCount = 1 %}
